          file to $(PERLPREFIX)/etc in preperation for shifting access to
          SuperCOSMOS from being dependant on Astro::Aladin to using the
          Astro::Catalog::Query::SkyCat module 
          
        * Query/Query/SuperCOSMOS.pm: Totally reimplemented this module
          from scratch to use the SkyCat.pm module rather than relying
          on the Astro::Aladin implementation. 

        * t/4_skycat_supercos.t: Added

2003-09-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query/CMC.pm: Added a Vizier Carlsberg Meridian Catalogue
          (CMC/11) query sub-class to try and figure out how Tim had written 
          the 2MASS (Vizier generic) class. RA & Dec incorrect.

        * Query/Query/2MASS.pm: Moved colour generation for 2MASS catalogue
          from the more generic IO/TST.pm module.
        
        * IO/TST.pm: See changes to Query/Query/2MASS.pm
        
2003-09-12  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query/Sesame.pm: Modified to copy with change in return
          format by CDS.

        * Query/Query/USNOA2.pm: Fixed problem with USNO-A2 having bogus
          RA and Dec seconds fields (= 60.0) which breaks Astro::Catalog.
          The query module now silently discards these objects (for now!).

        * Query/Query/GSC.pm: Fixed problem with GSC which dropped the
          B magnitude error into the quality flag. Fix breaks the t/4_gsc.t 
          test harness.
        
        * Catalog.pm: Changed default origin of <UNKNOWN> to UNKNOWN to
          avoid parsing problems when the results of a query are displayed
          as part of an HTML page.
                     
2003-08-26  Alasdair Allan <aa@astro.ex.ac.uk>

        * Star/Star.pm: Modified quality() routine so it knows about
          TST quality flags. Not a particularly good solution, need to
          generalise this and move it to the IO::TST module.
          
        * IO/Cluster.pm: Moved id() changes for USNO-A2 to generic code