@@ -5,7 +5,7 @@
 use strict;
 
 #load test
-use Test::More tests => 159;
+use Test::More tests => 150;
 use Data::Dumper;
 
 BEGIN {
@@ -67,20 +67,20 @@ foreach my $line ( 0 .. $#buffer ) {
 				       ));
 
        # B Magnitude
-       my %b_mag = ( B => $separated[10] );
+       my %b_mag = ( R => $separated[10] );
        $star->magnitudes( \%b_mag );
               
        # B mag error
-       my %mag_errors = ( B => $separated[11] );
+       my %mag_errors = ( R => undef );
        $star->magerr( \%mag_errors );
               
        # Quality
-       my $quality = $separated[11];
-       $star->quality( $quality );
+       my $quality = $separated[13];
+       $star->quality( undef );
               
        # Field
        my $field = $separated[12];
-       $star->field( $field );
+       $star->field( undef );
               
        # GSC, obvious!
        $star->gsc( "TRUE" );
@@ -142,8 +142,8 @@ __DATA__
    2 GSC0403000725 01 10 02.45 +60 01 05.6   0.3 13.94 0.40  1 0 01MU F;   3.74 200
    3 GSC0403000383 01 10 06.76 +60 05 25.9   0.2 11.54 0.40  1 0 01MU F;   1.13 317
    4 GSC0403000719 01 10 12.73 +60 04 14.4   0.2 13.91 0.40  1 0 01MU F;   0.36 183
-   5 GSC0403000581 01 10 34.84 +60 03 09.7   0.2 10.08 0.40  1 3 01MU F;   3.09 118
+   5 GSC0403000581 01 10 34.84 +60 03 09.7   0.2 10.08 0.40  1 1 01MU F;   3.09 118
    6 GSC0403000727 01 10 37.55 +60 04 33.6   0.2 13.94 0.40  1 0 01MU F;   3.07  91
    7 GSC0403000561 01 10 38.58 +60 01 46.1   0.2 10.29 0.40  1 0 01MU F;   4.28 131
    8 GSC0403000187 01 10 42.48 +60 07 24.3   0.2 11.89 0.40  1 0 01MU F;   4.63  53
-   9 GSC0403000655 01 10 50.99 +60 04 15.8   0.3 12.95 0.40  1 3 01MU F;   4.76  94
+   9 GSC0403000655 01 10 50.99 +60 04 15.8   0.3 12.95 0.40  1 1 01MU F;   4.76  94
